# neuron_fitting

./: README.md  pyproject.toml
.windsurf/rules/: workspace.md
adexlif_ot_ficurve/: adexlif_model.py  fig5e_fiplot_datasets.csv
adexlif_ot_ficurve/notebooks/: adexlif_example.ipynb
adexlif_ot_ficurve/results/: nevergrad_imc.txt  nevergrad_imc_pareto.txt  pymoo_ipc.txt  pymoo_ipc_pareto.txt
adexlif_ot_ficurve/results/pymoo_ipc_1/: pymoo_ipc.txt  pymoo_ipc_pareto.txt
adexlif_ot_ficurve/results/pymoo_ipc_2/: pymoo_ipc.txt  pymoo_ipc_pareto.txt
adexlif_ot_ficurve/results/scipy_1/: scipy_dualann_imc.txt
adexlif_ot_ficurve/scripts/: adexlif_nevergrad_moo.py  adexlif_pymoo_nsga.py  adexlif_scipy_diffevo.py  adexlif_scipy_dualann.py
adexlif_ot_ficurve/slurm/: adexlif_pymoo_imc.sbatch  adexlif_pymoo_ipc.sbatch
package_references/: JSCIP_REFERENCE.md
results/: pymoo_imc.txt  pymoo_ipc.txt  pymoo_ipc_pareto.txt
results/adexlif_pymoo_imc_1/: pymoo_imc_pareto.txt
results/adexlif_pymoo_ipc_1/: pymoo_ipc.txt
